Use seletor  reset CSS - style Image and Name Profile

--- a/style.css
+++ b/style.css
@@ -8,10 +8,27 @@ body {
   background: url(assets/bg-mobile.jpg) no-repeat top center/cover;
 }
 
+body * {
+  font-family: 'Inter', sans-serif;
+  color: #fff;
+}
+
 #container {
   width: 360px;
   margin: auto;
 }
 
 #profile {
+  text-align: center;
+}
+
+#profile img {
+  width: 112px;
+  border: 2px solid #828282;
+  border-radius: 50%;
+}
+
+#profile p {
+  font-weight: 500;
+  line-height: 24px;
 }
