--- a/style.css
+++ b/style.css
@@ -1,25 +1,38 @@
-body {
-  /* background-image: url(assets/bg-mobile.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover; */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  /*sort hand*/
-  background: url(assets/bg-mobile.jpg) no-repeat top center/cover;
+:root {
+  --text-color: #fff;
+  --bg-url: url(assets/bg-mobile.jpg);
+}
+
+.light {
+  --text-color: #000;
+  --bg-url: url(assets/bg-mobile-light.jpg);
+}
+
+body {
+  background: var(--bg-url) no-repeat top center/cover;
 }
 
 body * {
   font-family: 'Inter', sans-serif;
-  color: #fff;
+  color: var(--text-color);
 }
 
 #container {
   width: 360px;
-  margin: auto;
+
+  margin: 56px auto 0px;
+  padding: 0 24px;
 }
 
 #profile {
   text-align: center;
+  padding: 24px;
 }
 
 #profile img {
@@ -31,4 +44,68 @@ body * {
 #profile p {
   font-weight: 500;
   line-height: 24px;
+  margin-top: 8px;
+}
+
+ul {
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  padding: 24px 0;
+}
+
+ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 16px 24px;
+
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+
+  text-decoration: none;
+  font-weight: 500;
+  transition: background 0.3s;
+}
+
+ul li a:hover {
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid var(--text-color);
+}
+
+#social-links {
+  display: flex;
+  justify-content: center;
+
+  padding: 24px 0;
+
+  font-size: 24px;
+}
+
+#social-links a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+
+  transition: background 0.3s;
+  border-radius: 50%;
+}
+
+#social-links a:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+footer {
+  padding: 24px 0;
+  text-align: center;
+  font-size: 14px;
 }
