--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -120,7 +121,7 @@ ul li a {
 
   text-decoration: none;
   font-weight: 500;
-  transition: background 0.3s;
+  transition: background 0.2s;
 }
 
 ul li a:hover {
@@ -143,7 +144,7 @@ ul li a:hover {
   justify-content: center;
   padding: 16px;
 
-  transition: background 0.3s;
+  transition: background 0.2s;
   border-radius: 50%;
 }
 
@@ -155,4 +156,14 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(assets/bg-desktop-light.jpg);
+  }
 }
